<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormCadastroActivity">

    <TextView
        android:id="@+id/txtTitleCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Cadastro iCook"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fotoUsuario"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@color/black" />

    <Button
        android:id="@+id/bt_selecionarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:text="Selecione uma Foto"
        android:textColor="@color/black"
        android:textSize="15sp"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameboxform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/name_form"
        android:maxLines="1"
        android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailboxform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtEmailForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email_form"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordboxform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtSenhaForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password_form"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_mensagemErro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text=""
        android:textColor="#5555"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_Cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:enabled="false"
        android:padding="15sp"
        android:text="Cadastrar"
        android:textColor="#5A5A5A"
        android:textSize="18sp" />

</LinearLayout>
